# invoice-qr-extractor-rs

./: .gitignore  Cargo.toml  README.md  build.bat
.atomcode/: memory.md
.github/workflows/: build.yml
src/: app.rs  core.rs  main.rs
