[package]
name = "invoice-qr-extractor"
version = "1.0.0"
edition = "2021"
description = "从PDF发票文件中提取二维码内容，输出到CSV文件"

[[bin]]
name = "InvoiceQRExtractor"
path = "src/main.rs"

[dependencies]
# GUI框架
eframe = "0.31"
egui = "0.31"
# 原生文件对话框
rfd = "0.15"
# Windows内置PDF渲染 (WinRT API)
windows = { version = "0.60", features = [
    "Data_Pdf",
    "Foundation",
    "Storage",
    "Storage_Streams",
    "Graphics_Imaging",
]}
# 二维码识别 (纯Rust)
rqrr = "0.7"
# 图片处理
image = "0.25"
# CSV输出
csv = "1.3"
# 错误处理
anyhow = "1.0"
# 日志 (编译时静默，仅在debug时启用)
log = "0.4"
env_logger = "0.11"
